--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             <div class="home-wrapper entries-img">
               <img src="source/AB_hero_img.jpg" id="AB_hero">
               <div class="overlay-container">
-                <img src="source/AB_logo.png">  
+                <img src="source/AB_Logo.png">  
               </div>
             </div>
           </a>
@@ -65,7 +65,7 @@
               </div>
 
                 <div class="overlay-container">
-                  <img src="source/MF_logo.png">
+                  <img src="source/MF_Logo.png">
                 </div>
 
 
