--- a/index.html
+++ b/index.html
@@ -71,6 +71,7 @@
 
             </div></a>
 
+
             <div class="entries-text">
               <p class="eyebrow">Interaction, UI, Visual, Web design</p>
               <h2><a href="mayfair.html" class="no-link-style">Mayfair Gold</a></h2>
@@ -80,16 +81,24 @@
 
         </div>
 
-        <!--<div class="entries-block-A">
-          <img src="source/test3.jpg" class="entries-img">
+
+        <div class="entries-block-A">
+          <a href="hyperscience.html" class="no-link-style">
+            <div class="home-wrapper entries-img">
+              <img src="source/HS-stars.gif" id="HS_hero">
+              <div class="overlay-container">
+                <img src="source/HS_Logo.png">  
+              </div>
+            </div>
+          </a>
 
           <div class="entries-text">
-              <p class="eyebrow">User Research, interaction, ui design</p>
-              <h2>Pandora Premium</h2>
-              Reimagining selected user interface elements based on user feedback for the pioneer in online music streaming.
-              <p><br><a href="">View details ⟶</a>
+              <p class="eyebrow">Graphic, Motion design</p>
+              <h2>Hyperscience</h2>
+              Conveying messaging in visually compelling ways through animation-based storytelling.
+              <p><br><a href="hyperscience.html">View details ⟶</a>
           </div>
-        </div>-->
+        </div>
 
     </div>
 
