--- a/mayfair.html
+++ b/mayfair.html
@@ -138,7 +138,7 @@
         <video autoplay muted loop playsinline src="source/MF_animation_3.mp4" id="MF_animation_3">
         </div>
         <h3> Timing on Dropdown Animations</h3>
-        For dropdowns displayed on hover, a slight delay is included before the menu shows to ascertain that the user meant to hover and would not be subject to dropdowns flickering open and closed as the user runs their mouse over the navigation while scanning.
+        <p>For dropdowns displayed on hover, a slight delay is included before the menu shows to ascertain that the user meant to hover and would not be subject to dropdowns flickering open and closed as the user runs their mouse over the navigation while scanning.</p>
       </div>
 
       <div class="ux-block">
