--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
         <div class="entries-block-A">
           <a href="hyperscience.html" class="no-link-style">
             <div class="home-wrapper entries-img">
-              <img src="source/HS-stars.gif" id="HS_hero">
+              <img src="source/HS-Stars.gif" id="HS_hero">
               <div class="overlay-container">
                 <img src="source/HS_Logo.png">  
               </div>
