--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
               <p class="eyebrow">Graphic, Motion design</p>
               <h2>Hyperscience</h2>
               Conveying messaging in visually compelling ways through animation-based storytelling.
-              <p><br><a href="hyperscience.html">View details ⟶</a>
+              <p><br><a href="hyperscience.html">View more ⟶</a>
           </div>
         </div>
 
