--- a/mayfair.html
+++ b/mayfair.html
@@ -34,10 +34,10 @@
     </div>
 
         <div class="entries-block-A">
-         <div class="desktop-wrapper entries-img">
+         <div class="desktop-wrapper entries-img mayfair-header">
           <img src="source/MF_hero_img2.jpg">
           <img src="source/MF_hero_img1.jpg" class="desktop-fade">
-        </div>
+          </div>
 
           <div class="entries-text">  
             <h2>Ahead of the company’s IPO, I partnered with Mayfair Gold’s team to design their forthcoming web presence. </h2>
