--- a/abbot.html
+++ b/abbot.html
@@ -96,7 +96,7 @@
     <h2>Interaction Design</h2>
     Abbot Society especially wanted to establish a password-protected library dedicated to whisky tasting notes, financial information and news to be included on their website. 
 
-    <p>In determining how all of this information would be laid out and interact with one another, the team considered multiple ways to organize information. Across the entire user journey from logging in to reading a specific tasting note, the layout needed to balance information architecture and organization while remaining engaging and encouraging exploration.
+    <p>In determining how all of this content would be laid out and interact with one another, the team considered multiple ways to organize information. Across the entire user journey from logging in to reading a specific tasting note, the layout needed to balance information architecture and organization while remaining engaging and encouraging exploration.
 
   </div>
 
