--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title> Judy Chan | Designer </title>
   <link rel="stylesheet" type="text/css" href="style.css">
-  <link rel="stylesheet" href="https://use.typekit.net/vae6gkc.css">
+  <link rel="stylesheet" href="https://use.typekit.net/cpg7few.css">
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Questrial&display=swap">
   <link rel="icon" href="source/Favicon.ico">
